--- a/styles.css
+++ b/styles.css
@@ -1,212 +1,156 @@
 :root {
-    --primary-dark: #85756E;
-    --primary-light: #CDC5B4;
-    --secondary-light: #F7DAD9;
-    --primary-text: #CC2936;
-  }
+  --primary-dark: #85756E;
+  --primary-light: #CDC5B4;
+  --secondary-dark: #b0a58d;
+  --primary-text: #CC2936;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  background-color: var(--primary-light);
+  color: var(--primary-dark);
+  font-family: 'Chokokutai', cursive;
+  line-height: 1.5;
+  margin-bottom: 100px;
+}
+
+h1 {
+  line-height: 1.2px;
+}
+
+.title {
+  text-align: center;
+  font-size: 80px;
+  margin-bottom: 20px;
+}
+
+.header {
+  padding: 30px 0;
+}
+
+.form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.form  {
+  margin: 0;
+  padding: 0;
+}
+
+.new-grid-size {
+  width: 118px;
+  border: 1px solid var(--primary-dark);
+  margin: 20px;
+  border-radius: 4px;
+}
+
+/* .submit {
+  padding: 2px;
+  padding-right: 6px;
+  padding-left: 6px;
+  background-color: var(--primary-light);
+  border-radius: 4px;
+  font-family: exo;
+  border: 2px solid rgb(71, 69, 69);
+  cursor: pointer;
+} */
+
+#prompt {
+  font-size: 14px;
+  color: rgb(228, 72, 72);
+}
+
+input,
+button {
+  width: 100%;
+  border: none;
+  color: var(--primary-dark);
+  font-family: inherit;
+  font-size: inherit;
+  cursor: pointer;
+  outline: none;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+
+
+.settings {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  /* width: 200px; */
+}
+
+button {
+  padding: 10px 20px;
+  border: 1px solid var(--primary-dark);
+  border-radius: 5px;
+}
   
-  *,
-  *::before,
-  *::after {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-  }
-  
-  html {
-    position: relative;
-    min-height: 100%;
-  }
-  
-  body {
-    background-color: var(--primary-light);
-    color: var(--primary-dark);
-    font-family: 'Chokokutai', cursive;
-    line-height: 1.5;
-    margin-bottom: 100px;
-  }
-  
-  h1 {
-    line-height: 1.2;
-  }
-  
-  button,
-  input {
-    border: none;
-    border-radius: 4px;
-    width: 100%;
-    color: inherit;
-    font-size: inherit;
-    font-family: 'Chokokutai', cursive;
-    cursor: pointer;
-    outline: none;
-  }
-  
-  .header {
-    padding: 30px 0;
-  }
-  
-  .title {
-    text-align: center;
-    font-size: 80px;
-  /*   font-weight: bold; */
-  }
-  
-  .main {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 100px;
-    margin: 0 auto;
-    max-width: 1000px;
-  }
-  
-  .settings {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
-    width: 200px;
-  }
-  
-  button {
-    padding: 10px 20px;
-    border: 1px solid var(--primary-dark);
-    border-radius: 5px;
-  }
-  
-  button:active {
-    background-color: var(--primary-dark);
-    color: var(--primary-light);
-  }
-  
-  button > input[type='color'] {
-    transition: transform 0.1s ease-in-out;
-  }
-  
-  button:hover, input[type='color']:hover {
-    transform: scale(1.03);
-  }
-  
-  input[type='color'] {
-    width: 100px;
-    height: 40px;
-    -webkit-appearance: none;
-  }
-  
-  
-  input[type='color']::-webkit-color-swatch-wrapper {
-    padding: 0;
-  }
-  
-  input[type='color']::-webkit-color-swatch {
-    border: none;
-    border-radius: 50px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  }
-  
-  .size-value {
-    margin-bottom: -20px;
-    font-size: 20px;
-  }
-  
-  input[type='range'] {
-    -webkit-appearance: none;
-    background-color: var(--primary-dark);
-  }
-  
-  input[type='range']::-webkit-slider-runnable-track {
-    height: 10px;
-    border: 1px solid var(--primary-dark);
-    border-radius: 25px;
-    background: var(--secondary-light);
-  }
-  
-  input[type='range']::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    width: 24px;
-    height: 24px;
-    border-radius: 25px;
-    margin-top: -8px;
-    background: var(--primary-dark);
-  }
-  
-  .grid {
-    display: grid;
-    width: 500px;
-    height: 500px;
-    background-color: var(--secondary-dark);
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  }
-  
-  .grid-element {
-    user-select: none;
-  }
-  
-  footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 10px;
-    width: 100%;
-    padding: 10px;
-    font-size: 20px;
-  }
-  
-  .fa-github {
-    color: var(--primary-dark);
-    font-size: 24px;
-    transition: transform 0.3s ease-in-out;
-  }
-  
-  .fa-github:hover {
-    color: var(--secondary-light);
-  }
-  
-  
-  /*  Media queries */
-  
-  @media (max-width: 1200px) {
-    .main {
-      justify-content: center;
-    }
-  }
-  
-  @media (max-width: 850px) {
-    .main {
-      gap: 50px;
-    }
-    
-    .settings {
-      width: 150px;
-      gap: 16px;
-    }
-    
-    .size-value {
-      margin-bottom: -5px;
-    }
-    
-    .grid {
-      width: 400px;
-      height: 400px;
-    }
-  }
-  
-  @media (max-width: 650px) {
-    .title {
-      font-size: 50px
-    }
-    
-    .main {
-      flex-direction: column-reverse;
-    }
-    
-    .grid {
-      width: 300px;
-      heigth: 300px;
-    }
-  }
+button:active {
+  background-color: var(--primary-dark);
+  color: var(--primary-light);
+}
+
+.grid {
+  display: grid;
+  width: 500px;
+  height: 500px;
+  background-color: var(--secondary-dark);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 100%;
+  padding: 10px;
+  font-size: 20px;
+}
+
+a {
+  color: var(--primary-dark);
+}
+
+a:link { text-decoration: none; }
+a:visited { text-decoration: none; }
+a:hover { text-decoration: none; }
+a:active { text-decoration: none; }
+
+.fa-github {
+  color: var(--primary-dark);
+  font-size: 24px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.fa-github:hover
+{
+  transform: scale(1.1);
+}
